Fixing privilege escalation on 10.6 by handling underlying NSErrors in detection code.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1119,6 +1119,8 @@ subethaedit/NSColorTCMAdditions.m -text
 subethaedit/NSCoreSuite.sdef -text
 subethaedit/NSCursorSEEAdditions.h -text
 subethaedit/NSCursorSEEAdditions.m -text
+subethaedit/NSErrorTCMAdditions.h -text
+subethaedit/NSErrorTCMAdditions.m -text
 subethaedit/NSImageTCMAdditions.h -text
 subethaedit/NSImageTCMAdditions.m -text
 subethaedit/NSMenuTCMAdditions.h -text
